# rip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLame.cmake
src/: CMakeLists.txt  rip.cpp
